new shop categories and promo code

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <br>
                             WHEY PROTEIN
                             <br>
-                            <a class=" button-shop p-3" href="./pages/shop.html">SHOP NOW</a>
+                            <a class=" button-shop p-3" href="./pages/shop-whey-protein.html">SHOP NOW</a>
                         </h1>
                     </div>
                   </div>
