--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -132,8 +132,8 @@
         <h2>Your result is</h2>
         <h3><span class="resultCal">----</span> calories per day</h3>
         <ul class="resultList">
-            <li>If you need to loss some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
-            <li>If you want to mantein your weight you should consume <span class="resultCal">----</span> calories per day.</li>
+            <li>If you need to lose some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
+            <li>If you want to maintain your weight you should consume <span class="resultCal">----</span> calories per day.</li>
             <li>If you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
         </ul>
         <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
