--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -153,22 +153,23 @@
         </div>
         <!--categories shop-->
         <div class="shop__secondary__container">    
-            <h4 class="check__also">Check also</h4>
-            <section class="other__categorie__shop">
-                    <div class="categorie_1">
-                        <a href="./shop-whey-protein.html">
-                            <img src="../img/wheyprotein-banner.webp" alt="whey-protein">
-                            <a href="./shop-whey-protein.html">Whey protein</a>
-                        </a>
-                    </div>
-                    <div class="categorie_2">
-                        <a href="./shop-bmi-scales.html">
-                            <img src="../img/scales-banner.jpeg" alt="BMI-scales">
-                            <a href="./shop-bmi-scales.html">BMI Scales</a>
-                        </a>
-                    </div>
-            </section>
-        </div>
+          <h4 class="check__also">Check also</h4>
+          <section class="other__categorie__shop">
+                  <div class="categorie_1">
+                      <a href="./shop-whey-protein.html">
+                            <img src="../img/wheyprotein__icon.png" alt="whey-protein">
+                            <h5>WHEY PROTEIN</h5>
+                      </a>
+                  </div>
+                  <div class="categorie_2">
+                      <a href="./shop-bmi-scales.html">
+                      <img src="../img/scale__icon.png" alt="scales">
+                      <h5>BMI SCALES</h5>
+                      </a>
+                  </div>
+              </a>
+          </section>
+      </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
