--- a/pages/shop.html
+++ b/pages/shop.html
@@ -64,23 +64,34 @@
     </header>
     <!--shop / categories-->
     <main>
-        <div class="main__shop">
-          <a class="shakers__banner" href="./shop-shakers.html">
+        <div id="categorieShop">
+          <a class="cat4" href="./shop-shakers.html">
             <div>
-                <h2 class="title__shop p-2">SHAKERS</h2>
+                <div>
+                    <img src="../img/shaker_icon.png" alt="shakers">
+                    <h2 class="title__hidden">SHAKERS</h2>
+                </div>
             </div>
         </a>
-        <a  class="whey__banner" href="./shop-whey-protein.html">
+        <a class="cat5" href="./shop-whey-protein.html">
             <div>
-                <h2 class="title__shop p-2">WHEY PROTEIN</h2>
+                <div>
+                    <img src="../img/wheyprotein__icon.png" alt="wheyprotein">
+                    <h2 class="title__hidden">WHEY PROTEIN</h2>
+                </div>
             </div>
         </a>
-        <a  class="scales__banner" href="./shop-bmi-scales.html">
+        <a class="cat6" href="./shop-bmi-scales.html">
             <div>
-                <h2 class="title__shop p-2">BMI SCALES</h2>
+                <div>
+                    <img src="../img/scale__icon.png" alt="scales">
+                    <h2 class="title__hidden">BMI SCALES</h2>
+                </div>
             </div>
         </a>
         </div>
+       
+
         <div class="discount__banner">
             <h1>GET 15% OFF</h1>
             <h2>IN YOUR FIRST PURCHASE</h2>
