--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./pages/caloriedeficit.html">What is a calorie deficit?</a>
+                        <a class="nav-link" aria-current="page" href="./pages/caloriedeficit.html">What is a calorie deficit?</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,13 +54,25 @@
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
+                      <input class="form-control btn__search" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-success btn__color" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>
+                      </button>
                     </form>
                   </div>
                 </div>
               </nav>
         </nav>
+        <a href="https://web.whatsapp.com/" target="blank">
+          <button class="messenger">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-text" viewBox="0 0 16 16">
+              <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+              <path d="M4 5.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8zm0 2.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+          </button>
+        </a>
     </header>
     <main>
         <div class="banner__carrousel">
@@ -150,9 +162,9 @@
     <!--Social media icons-->
         <h5>Follow us</h5>
         <div class="social">
-            <a href="http://www.facebook.com"><img src="./img/facebooklogo.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com"><img src="./img/instagramlogo.png" alt="Instagram"></a>
-            <a href="http://www.youtube.com"><img src="./img/youtubelogo.png" alt="Youtube"></a>
+            <a href="http://www.facebook.com" target="_blank"><img src="./img/facebooklogo.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com" target="_blank"><img src="./img/instagramlogo.png" alt="Instagram"></a>
+            <a href="http://www.youtube.com" target="_blank"><img src="./img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
