--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -20,46 +20,50 @@
     <header>
          <!--Nav menu-->
          <nav>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand logo" href="../index.html">
-                    <img src="../img/logoblack.png" alt="logo">
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Recipes
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
-                            <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
-                            <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./calculator.html">Calculator</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./shop.html">Shop</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                  </div>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand logo" href="../index.html">
+                  <img src="../img/logoblack.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Recipes
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
+                          <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
+                          <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./calculator.html">Calculator</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="./shop.html">Shop</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex" role="search">
+                    <input class="form-control btn__search" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-success btn__color" type="submit">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg>
+                    </button>
+                  </form>
                 </div>
-              </nav>
+              </div>
+            </nav>
         </nav>
     </header>
     <main class="mainShop">
@@ -175,9 +179,9 @@
         <!--Social media icons-->
         <h5>Follow us</h5>
         <div class="social">
-            <a href="http://www.facebook.com"><img src="../img/facebooklogo.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com"><img src="../img/instagramlogo.png" alt="Instagram"></a>
-            <a href="http://www.youtube.com"><img src="../img/youtubelogo.png" alt="Youtube"></a>
+            <a href="http://www.facebook.com" target="_blank"><img src="../img/facebooklogo.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com" target="_blank"><img src="../img/instagramlogo.png" alt="Instagram"></a>
+            <a href="http://www.youtube.com" target="_blank"><img src="../img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
