--- a/pages/shop-bmi-scales.html
+++ b/pages/shop-bmi-scales.html
@@ -67,96 +67,78 @@
         </nav>
     </header>
     <main class="mainShop">
-        <div class="basket__container">
-            <div class="basket__items">
-                <p>Cart</p>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket3-fill" viewBox="0 0 16 16">
-                <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.73-.574z"/>
-                </svg>
-            </div>
-        </div>
+      <div class="mainShopContainer">
         <div class="shop__main__container">
-            <div class="shop__picture">
-                <img src="../img/bmi-scales.png" alt="bmi-scales">
-            </div>
-            <div class="shop__title">
-                <h3>BMI scales</h3>
-                <p>Sportsbuddy Scale is our attempt to make it easier to follow weight development. Scale comes with a free app that can be downloaded from both the App Store and Google Play. That application is called Fitgo and it gives you a wealth of information when set up with Bluetooth!</p>
-                <div class="shop__icons">
-                    <div class="heart">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                          </svg>
+          <div class="shop__picture">
+              <img src="../img/bmi-scales.png" alt="bmi-scales">
+          </div>
+          <div class="shop__title">
+              <h3>BMI scales</h3>
+              <p>Sportsbuddy Scale is our attempt to make it easier to follow weight development. Scale comes with a free app that can be downloaded from both the App Store and Google Play. That application is called Fitgo and it gives you a wealth of information when set up with Bluetooth!</p>
+              <div class="shop__variations">
+                  <div class="dropdown">
+                      <select name="" id="colorBMIScale" required class="selectors">
+                        <option value="none">Select color</option>
+                        <option value="8">White</option>
+                        <option value="9">Black</option>
+                    </select>
                     </div>
-                    <div class="cart">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
-                            <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z"/>
-                            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                          </svg>
-                    </div>
-                    <div class="share">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
-                            <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
-                          </svg>
-                    </div>
-                </div>
-                <div>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn buy__now__style" data-bs-toggle="modal" data-bs-target="#exampleModal">                             
-                      SHOP NOW
-                    </button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">Sorry!</h1>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              Our e-Commerce is under construction :)
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </div>
-        <div class="shop__primary__container">
-            <div class="product__description">
-                <h5>Description</h5>
-                <p>
-                  <li>Size: 28 x 28 CM</li>
-                  <li>Can measure weight up to 180 kilograms</li>
-                  <li>Units of measurement: KG / LBS / ST</li>
-                  <li>Batteries: 2 x AAA batteries (Not included)</li>
-                  <li>RoHS certified</li>
-                  <li>CE certified</li>
-                </p>
-        </div>
-        <!--categories shop-->
-        <div class="shop__secondary__container">    
-          <h4 class="check__also">Check also</h4>
-          <section class="other__categorie__shop">
-                  <div class="categorie_1">
-                      <a href="./shop-shakers.html">
-                            <img src="../img/shaker_icon.png" alt="shakers">
-                            <h5>SHAKERS</h5>
-                      </a>
+              </div>
+              <div>
+                   <!-- Button trigger modal -->
+                  <div>
+                    <button type="button" class="btn btn buy__now__style" id="addToCartBtn">                             
+                    ADD TO CART
+                  </button>
                   </div>
-                  <div class="categorie_2">
-                      <a href="./shop-whey-protein.html">
-                      <img src="../img/wheyprotein__icon.png" alt="whey-protein">
-                      <h5>WHEY PROTEIN</h5>
-                      </a>
-                  </div>
-              </a>
-          </section>
+              </div>
+          </div>
       </div>
-    </main>
+        <div class="basket__container">
+          <div class="basket__items" id="checkCart">
+              <p>Your cart</p>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket3-fill" viewBox="0 0 16 16">
+              <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.73-.574z"/>
+              </svg>
+          </div>
+          <div id="cartContainer"></div>
+          <div class="checkOut">
+            <button id="checkOut">CHECK OUT</button>
+          </div>
+      </div>
+      </div>
+      <div class="shop__primary__container">
+        <div class="product__description">
+            <h5>Description</h5>
+            <p>
+              <li>Size: 28 x 28 CM</li>
+              <li>Can measure weight up to 180 kilograms</li>
+              <li>Units of measurement: KG / LBS / ST</li>
+              <li>Batteries: 2 x AAA batteries (Not included)</li>
+              <li>RoHS certified</li>
+              <li>CE certified</li>
+            </p>
+    </div>
+    <!--categories shop-->
+    <div class="shop__secondary__container">    
+      <h4 class="check__also">Check also</h4>
+      <section class="other__categorie__shop">
+              <div class="categorie_1">
+                  <a href="./shop-shakers.html">
+                        <img src="../img/shaker_icon.png" alt="shakers">
+                        <h5>SHAKERS</h5>
+                  </a>
+              </div>
+              <div class="categorie_2">
+                  <a href="./shop-whey-protein.html">
+                  <img src="../img/wheyprotein__icon.png" alt="whey-protein">
+                  <h5>WHEY PROTEIN</h5>
+                  </a>
+              </div>
+          </a>
+      </section>
+  </div>
+  </main>
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
@@ -167,5 +149,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/cart.js"></script>
+</body>
 </body>
 </html>
