--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -147,12 +148,12 @@
                 </div>
               
                 <div class="containernews2">
-                  <input type="text" placeholder="Full name" name="name" required>
-                  <input type="text" placeholder="Email address" name="mail" required>
+                  <input type="text" placeholder="Full name" name="name" required id="inputName">
+                  <input type="text" placeholder="Email address" name="mail" required id="inputEmail">
                 </div>
               
                 <div class="containernews3">
-                  <input type="submit" value="SUBSCRIBE">
+                  <button type="submit" value="SUBSCRIBE" id="suscribeButton">SUSCRIBE</button>
                 </div>
               </form> 
         </div>
@@ -168,5 +169,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./js/newsletter.js"></script>
 </body>
 </html>
