--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -88,13 +89,24 @@
                       </div>
                 </div>
                 <div>
-                     <!-- Button trigger modal -->
                     <div>
                       <button type="button" class="btn btn buy__now__style" id="addToCartBtn">                             
                       ADD TO CART
                     </button>
-                    </div>
+                    </div>   
                 </div>
+                <div class="postalCodeContainer">
+                  <select name="" id="countrySelect" class="countrySelector">
+                    <option value="denmark">Denmark</option>
+                    <option value="europe">Europe</option>
+                    <option value="world">Rest of the world</option>
+                  </select>
+                  <div class="postaCodeInputContainer">
+                    <input type="text" id="postalCodeInput" placeholder="Enter Postal Code" class="postalCodeInput">
+                    <button id="calculateShippingBtn" class="shippingButton">Calculate Shipping</button>
+                  </div>
+                </div>
+                <p class="resultShipping">Shipping Cost: <span id="shippingCost"></span></p>
             </div>
         </div>
           <div class="basket__container">
@@ -104,7 +116,8 @@
                 <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.73-.574z"/>
                 </svg>
             </div>
-            <div id="cartContainer"></div>
+            <div id="cartContainer">
+            </div>
             <div class="checkOut">
               <button id="checkOut">CHECK OUT</button>
             </div>
@@ -153,7 +166,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/shipping.js"></script>
     <script src="../js/cart.js"></script>
 </body>
 </html>
